Ensure app JAR build order
Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

--- a/spring-boot-examples/workflows/multi-app/orchestrator/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/orchestrator/pom.xml
@@ -45,6 +45,19 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <!-- Worker dependencies to ensure Maven reactor builds them before integration tests -->
+    <dependency>
+      <groupId>io.dapr</groupId>
+      <artifactId>worker-one</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.dapr</groupId>
+      <artifactId>worker-two</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
@@ -73,6 +86,23 @@
         <configuration>
           <!-- Skip checkstyle for auto-generated code -->
           <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <includes>
+            <include>**/*IT.java</include>
+          </includes>
         </configuration>
       </plugin>
     </plugins>
