--- a/spring-boot-examples/workflows/multi-app/worker-one/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/worker-one/pom.xml
@@ -25,6 +25,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.dapr.spring</groupId>
