Fix dependencies multi app build and add proper test deps (#1572)
* Force Jackson version to override the SB Jackson version

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Move all the Jackson deps to parent POM.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Ensure app JAR build order

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Remove explicit Jackson from sdk-tests module.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Make sure <scope>test</scope> is used for test dependencies.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Remove extra Jackson modules.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

---------

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>
Signed-off-by: salaboy <Salaboy@gmail.com>

--- a/spring-boot-examples/workflows/multi-app/orchestrator/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/orchestrator/pom.xml
@@ -25,6 +25,7 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.dapr.spring</groupId>
@@ -43,6 +44,19 @@
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <!-- Worker dependencies to ensure Maven reactor builds them before integration tests -->
+    <dependency>
+      <groupId>io.dapr</groupId>
+      <artifactId>worker-one</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.dapr</groupId>
+      <artifactId>worker-two</artifactId>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -73,6 +87,23 @@
         <configuration>
           <!-- Skip checkstyle for auto-generated code -->
           <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <includes>
+            <include>**/*IT.java</include>
+          </includes>
         </configuration>
       </plugin>
     </plugins>
