--- a/sdk-workflows/pom.xml
+++ b/sdk-workflows/pom.xml
@@ -42,6 +42,14 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>io.micrometer</groupId>
+      <artifactId>micrometer-observation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.opentelemetry</groupId>
+      <artifactId>opentelemetry-api</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.dapr</groupId>
       <artifactId>durabletask-client</artifactId>
     </dependency>
