Remove plugin duplicates
Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

--- a/sdk-tests/pom.xml
+++ b/sdk-tests/pom.xml
@@ -8,6 +8,7 @@
     <groupId>io.dapr</groupId>
     <artifactId>dapr-sdk-parent</artifactId>
     <version>1.17.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>dapr-sdk-tests</artifactId>
