--- a/dapr-spring/dapr-spring-data/pom.xml
+++ b/dapr-spring/dapr-spring-data/pom.xml
@@ -7,6 +7,7 @@
     <groupId>io.dapr.spring</groupId>
     <artifactId>dapr-spring-parent</artifactId>
     <version>1.17.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>dapr-spring-data</artifactId>
