--- a/spring-boot-examples/workflows/multi-app/worker-two/pom.xml
+++ b/spring-boot-examples/workflows/multi-app/worker-two/pom.xml
@@ -7,6 +7,7 @@
     <groupId>io.dapr</groupId>
     <artifactId>multi-app</artifactId>
     <version>1.17.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>worker-two</artifactId>
