Another set of Maven version, properties and plugin improvements (#1596)
Signed-off-by: salaboy <Salaboy@gmail.com>

--- a/sdk-tests/pom.xml
+++ b/sdk-tests/pom.xml
@@ -8,6 +8,7 @@
     <groupId>io.dapr</groupId>
     <artifactId>dapr-sdk-parent</artifactId>
     <version>1.17.0-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>dapr-sdk-tests</artifactId>
@@ -256,7 +257,7 @@
       <plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
         <artifactId>protobuf-maven-plugin</artifactId>
-        <version>0.6.1</version>
+        <version>${protobuf-maven-plugin.version}</version>
         <configuration>
           <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
           <pluginId>grpc-java</pluginId>
@@ -275,7 +276,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>${maven-jar-plugin.version}</version>
         <executions>
           <execution>
             <goals>
@@ -287,7 +288,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.2.2</version>
+        <version>${failsafe.version}</version>
       </plugin>
     </plugins>
   </build>
