Bringing Durable Task Java as a Maven module inside the Java SDK (#1575)
* fixing checkstyle and javadocs

Signed-off-by: salaboy <Salaboy@gmail.com>

* Replace openjdk:17-jdk-slim to eclipse-temurin:17-jdk-jammy (#1574)

Signed-off-by: Matheus Cruz <matheuscruz.dev@gmail.com>
Signed-off-by: salaboy <Salaboy@gmail.com>

* Align Java API with other languages (#1560)

* Align Java API with other languages

Signed-off-by: Matheus Cruz <matheuscruz.dev@gmail.com>

* Update documentation

Signed-off-by: Matheus Cruz <matheuscruz.dev@gmail.com>

* Change return type of waitForWorkflowStart method

Signed-off-by: artur-ciocanu <artur.ciocanu@gmail.com>

---------

Signed-off-by: Matheus Cruz <matheuscruz.dev@gmail.com>
Signed-off-by: artur-ciocanu <artur.ciocanu@gmail.com>
Co-authored-by: artur-ciocanu <artur.ciocanu@gmail.com>
Signed-off-by: salaboy <Salaboy@gmail.com>

* use built in durable task

Signed-off-by: salaboy <Salaboy@gmail.com>

* exclude jacoco rules for examples and durabletask-client

Signed-off-by: salaboy <Salaboy@gmail.com>

* increasing timeout for IT

Signed-off-by: salaboy <Salaboy@gmail.com>

* removing dt build from matrix

Signed-off-by: salaboy <Salaboy@gmail.com>

* adding java to dt build

Signed-off-by: salaboy <Salaboy@gmail.com>

* Fix dependencies multi app build and add proper test deps (#1572)

* Force Jackson version to override the SB Jackson version

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Move all the Jackson deps to parent POM.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Ensure app JAR build order

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Remove explicit Jackson from sdk-tests module.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Make sure <scope>test</scope> is used for test dependencies.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Remove extra Jackson modules.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

---------

Signed-off-by: Artur Ciocanu

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,10 +46,58 @@ jobs:
           name: report-dapr-java-sdk-actors-jdk${{ env.JDK_VER }}
           path: sdk-actors/target/jacoco-report/
 
+  build-durabletask:
+    name: "Durable Task build & tests"
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    continue-on-error: false
+    env:
+      JDK_VER: 17
+    steps:
+    - uses: actions/checkout@v5
+    - name: Set up OpenJDK ${{ env.JDK_VER }}
+      uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version: ${{ env.JDK_VER }}
+    - name: Checkout Durable Task Sidecar
+      uses: actions/checkout@v4
+      with:
+        repository: dapr/durabletask-go
+        path: durabletask-sidecar
+
+    # TODO: Move the sidecar into a central image repository
+    - name: Initialize Durable Task Sidecar
+      run: docker run -d --name durabletask-sidecar -p 4001:4001 --rm -i $(docker build -q ./durabletask-sidecar)
+
+    - name: Display Durable Task Sidecar Logs
+      run: nohup docker logs --since=0 durabletask-sidecar > durabletask-sidecar.log 2>&1 &
+
+      # wait for 10 seconds, so sidecar container can be fully up, this will avoid intermittent failing issues for integration tests causing by failed to connect to sidecar
+    - name: Wait for 10 seconds
+      run: sleep 10
+
+    - name: Integration Tests For Durable Tasks
+      run: ./mvnw -B -pl durabletask-client -Pintegration-tests dependency:copy-dependencies verify || echo "TEST_FAILED=true" >> $GITHUB_ENV
+      continue-on-error: true
+
+    - name: Kill Durable Task Sidecar
+      run: docker kill durabletask-sidecar
+
+    - name: Upload Durable Task Sidecar Logs
+      uses: actions/upload-artifact@v4
+      with:
+        name: Durable Task Sidecar Logs
+        path: durabletask-sidecar.log
+
+    - name: Fail the job if tests failed
+      if: env.TEST_FAILED == 'true'
+      run: exit 1
+
   build:
     name: "Build jdk:${{ matrix.java }} sb:${{ matrix.spring-boot-display-version }} exp:${{ matrix.experimental }}"
     runs-on: ubuntu-latest
-    timeout-minutes: 30
+    timeout-minutes: 45
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
@@ -151,7 +199,7 @@ jobs:
       run: ./mvnw clean install -B -q -DskipTests
     - name: Integration tests using spring boot version ${{ matrix.spring-boot-version }}
       id: integration_tests
-      run: PRODUCT_SPRING_BOOT_VERSION=${{ matrix.spring-boot-version }} ./mvnw -B -Pintegration-tests dependency:copy-dependencies verify
+      run: PRODUCT_SPRING_BOOT_VERSION=${{ matrix.spring-boot-version }} ./mvnw -B -pl !durabletask-client -Pintegration-tests dependency:copy-dependencies verify
     - name: Upload failsafe test report for sdk-tests on failure
       if: ${{ failure() && steps.integration_tests.conclusion == 'failure' }}
       uses: actions/upload-artifact@v5
@@ -165,9 +213,10 @@ jobs:
         name: surefire-report-sdk-tests-jdk${{ matrix.java }}-sb${{ matrix.spring-boot-version }}
         path: sdk-tests/target/surefire-reports
 
+
   publish:
     runs-on: ubuntu-latest
-    needs: [ build, test ]
+    needs: [ build, test, build-durabletask ]
     timeout-minutes: 30
     env:
       JDK_VER: 17
