Adding DaprSpringBootTest and DaprSidecarContainer annotation for easier ITs authoring (#1610)
* Adding DaprSpringBootTest and DaprSidecarContainer annotation for easier IT authoring.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

# Conflicts:
#	testcontainers-dapr/pom.xml

* Adding DaprSpringBootTest and DaprSidecarContainer annotation for easier IT authoring.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Move all the helper Dapr SpringBoot annotations to tests, to avoid exposing it as public API

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Fix a few issues related to Dapr container usage in ITs.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

* Addressing code review comments to ensure things are internal.

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>

---------

Signed-off-by: Artur Ciocanu <artur.ciocanu@gmail.com>
Co-authored-by: Cassie Coyle <cassie.i.coyle@gmail.com>
Signed-off-by: salaboy <Salaboy@gmail.com>

--- a/testcontainers-dapr/pom.xml
+++ b/testcontainers-dapr/pom.xml
@@ -15,16 +15,7 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
-            <scope>test</scope>
-        </dependency>
+		<!-- Core dependencies -->
 		<dependency>
 			<groupId>org.yaml</groupId>
 			<artifactId>snakeyaml</artifactId>
@@ -37,6 +28,18 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+
+		<!-- Test dependencies -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
     <build>
